--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,3 +2,7 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    globals:
+        projectname: '%projectname%'
+        subtitle: 'An API based approach to the rules of the Pathfinder RPG by Paizo.'
+        paypallink: '%paypallink%'
