--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,19 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+index:
+  path: /
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: 'static/index.html.twig'
+    maxAge:    86400
+    sharedAge: 86400
+
+contribute:
+  path: /contribute
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: 'static/contribute.html.twig'
+    maxAge:    86400
+    sharedAge: 86400
+
