--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,5 +4,5 @@ twig:
     strict_variables: '%kernel.debug%'
     globals:
         projectname: '%projectname%'
-        subtitle: 'An API based approach to the rules of the Pathfinder RPG by Paizo.'
+        subtitle: 'API access to the rules of the Pathfinder RPG by Paizo.'
         paypallink: '%paypallink%'
