--- a/fixtures/spells/spells-divination.yml
+++ b/fixtures/spells/spells-divination.yml
@@ -6,6 +6,7 @@ App\Entity\Spell:
     castingTime: 1 standard action
     spellRange: personal
     target: you
+    duration: 10 min./level
     components: [V,S,'F (a clear crystal or mineral prism)']
     description: <markdown(spells/mage-armor.md)>
     source: "@core-rulebook"
@@ -16,6 +17,7 @@ App\Entity\Spell:
     castingTime: 1 standard action
     spellRange: personal
     target: you
+    duration: see text
     components: [V,'F (small wooden replica of an archery target)']
     description: <markdown(spells/mage-armor.md)>
     source: "@core-rulebook"
