Search for spells and magic schools

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,11 +9,11 @@ index:
     maxAge:    86400
     sharedAge: 86400
 
-domains:
-  path: /domains
+magic:
+  path: /magic
   controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
   defaults:
-    template: 'static/domains.html.twig'
+    template: 'static/magic.html.twig'
     maxAge:    86400
     sharedAge: 86400
 
