--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/orm": "^2.6",
         "erusev/parsedown": "^1.7",
         "sergej-kurakin/diceroller": "^2.0",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
