--- a/fixtures/spells/spells-divination.yml
+++ b/fixtures/spells/spells-divination.yml
@@ -1,4 +1,16 @@
 App\Entity\Spell:
+  detect-magic:
+    name: Detect Magic
+    slug: detect-magic
+    school: "@divi"
+    castingTime: 1 standard action
+    spellRange: 60 ft.
+    area: cone-shaped emanation
+    duration: concentration, up to 1 min./level (D)
+    savingThrow: none
+    spellResistance: no
+    description: <markdown(spells/detect-magic.md)>
+    source: '@core-rulebook'
   read-magic:
     name: Read Magic
     slug: read-magic
