--- a/fixtures/spells/spells-evocation.yml
+++ b/fixtures/spells/spells-evocation.yml
@@ -26,6 +26,19 @@ App\Entity\Spell:
     components: [V,S,'M (a ball of bat guano and sulfur)']
     description: <markdown(spells/mage-armor.md)>
     source: "@core-rulebook"
+  flare:
+    name: Flare
+    slug: flare
+    school: "@evoc"
+    castingTime: 1 standard action
+    spellRange: close (25 ft. + 5 ft./2 levels)
+    subschool: Light
+    duration: instantaneous
+    savingThrow: Fortitude negates
+    spellResistance: yes
+    components: [V]
+    description: <markdown(spells/flare.md)>
+    source: '@core-rulebook'
   shocking-grasp:
     name: Shocking Grasp
     slug: shocking-grasp
