uuh. Kind of forgot rogue and monk

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -9,6 +9,7 @@ twig:
         githublink: '%githublink%'
         changelog:
             'Sept. 30, 2019':
+                - 'added Rogue and Monk to the core classes. Somehow forgot those guys'
                 - '`description` and `role` added for classes'
                 - '`domain` and domain spells added'
                 - 'Changelog added 🎉'
