--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         "symfony/framework-bundle": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "4.3.*",
-        "webmozart/assert": "^1.5"
+        "webmozart/assert": "^1.5",
+        "hautelook/alice-bundle": "^2.5"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "friendsofphp/php-cs-fixer": "^2.15",
-        "hautelook/alice-bundle": "^2.5",
         "symfony/maker-bundle": "^1.13",
         "symfony/var-dumper": "^4.3"
     },
